Additional delete action optimization